--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ git:
   depth: false
 os: linux
 dist: xenial
-stages:
-  - check
-  - telegram
-script:
+before_script:
   - echo "Downloading jdk"
   - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
   - source ./install-jdk.sh --url https://download.bell-sw.com/java/8u265+1/bellsoft-jdk8u265+1-linux-amd64-full.tar.gz
   - java -version
 env:
   - JDK="bellsoft-jdk8u265+1-linux-amd64-full"
+stages:
+  - check
+  - telegram
 jobs:
   include:
     - stage: check
