--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ jobs:
       #if: type != pull_request
       if: branch = release
       script:
-        $TRAVIS_TAG=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
-        $TRAVIS_TAG="${TRAVIS_TAG:1}"
+        - $TRAVIS_TAG=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
+        - $TRAVIS_TAG="${TRAVIS_TAG:1}"
       env:
         - PUBLISH="true"
 before_install:
