--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ jobs:
       script:
         - TRAVIS_TAG="./gradlew -q printGitSemVer | cut -f 2 -d:"
         - eval $TRAVIS_TAG
+        - ./gradlew check --scan --parallel
       env:
         - PUBLISH="true"
 before_install:
