--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
       #if: type != pull_request
       if: branch = release
       script:
-        - TRAVIS_TAG=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
+        - RELEASE_NAME=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
       env:
         - PUBLISH="true"
 before_install:
@@ -44,6 +44,7 @@ deploy:
     file_glob: true
     file: "${HOME}/build/Unibo-PPS-1920/pps-19-motoScala/build/libs/pps-19-motoScala-*.jar"
     skip_cleanup: 'true'
+    name: $RELEASE_NAME
     on:
       os: linux
       repo: Unibo-PPS-1920/pps-19-motoScala
@@ -52,6 +53,7 @@ deploy:
   - provider: pages
     github_token: $GITHUB_TOKEN
     edge: true
+    name: $RELEASE_NAME
     skip_cleanup: 'true'
     local_dir: "${HOME}/build/Unibo-PPS-1920/pps-19-motoScala/report"
     on:
