--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,10 @@ jobs:
       name: "Deploy on Linux OS and JDK 8"
       os: linux
       #if: type != pull_request
-      if: branch = release
+      #if: branch = release
+      if: tag IS present
       script:
-        - RELEASE_NAME=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
+      #- RELEASE_NAME=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
       env:
         - PUBLISH="true"
 before_install:
@@ -34,8 +35,8 @@ before_deploy:
   - ./gradlew check assemble scaladoc --scan --parallel
   #- mkdir -p report
   #- cp --parent */build/reports build/reports report -R
-  - mkdir -p build/reports/ report/build/reports
-  - mkdir -p build/docs/ report/build/docs
+  - mkdir -p report/build/reports
+  - mkdir -p report/build/docs
   - cp -r build/docs/ report/build/docs
   - cp -r build/reports/ report/build/reports
 deploy:
@@ -50,6 +51,7 @@ deploy:
       repo: Unibo-PPS-1920/pps-19-motoScala
       condition: $PUBLISH = "true"
       all_branches: true
+      tags: true
   - provider: pages
     github_token: $GITHUB_TOKEN
     edge: true
@@ -61,3 +63,4 @@ deploy:
       repo: Unibo-PPS-1920/pps-19-motoScala
       condition: $PUBLISH = "true"
       all_branches: true
+      tags: true
