--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
       os: linux
       #if: type != pull_request
       #if: branch = release
-      if: tag IS present
+      #if: tag IS present
       script:
       #- RELEASE_NAME=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
       env:
