--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ jobs:
       name: "Deploy on Linux OS and JDK 8"
       os: linux
       #if: type != pull_request
-      #if: branch = release
-      #if: tag IS present
+      if: branch = release
       script:
       #- RELEASE_NAME=$(./gradlew -q printGitSemVer | cut -f 2 -d:)
       env:
@@ -51,7 +50,6 @@ deploy:
       repo: Unibo-PPS-1920/pps-19-motoScala
       condition: $PUBLISH = "true"
       all_branches: true
-      #tags: true
   - provider: pages
     github_token: $GITHUB_TOKEN
     edge: true
@@ -63,4 +61,3 @@ deploy:
       repo: Unibo-PPS-1920/pps-19-motoScala
       condition: $PUBLISH = "true"
       all_branches: true
-      #tags: true
