--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,8 @@ before_deploy:
   - ./gradlew check assemble scaladoc --scan --parallel
   #- mkdir -p report
   #- cp --parent */build/reports build/reports report -R
-  - mkdir -p build/reports/ report/build/reports
-  - mkdir -p build/docs/ report/build/docs
+  - mkdir -p report/build/reports
+  - mkdir -p report/build/docs
   - cp -r build/docs/ report/build/docs
   - cp -r build/reports/ report/build/reports
 deploy:
