Added kryo serialization, and first functional join lobby

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,49 @@ loglevel="DEBUG"
   actor {
     # provider=remote is possible, but prefer cluster
     provider = remote
+
+serializers {
+    java = "akka.serialization.JavaSerializer"
+    # Define kryo serializer
+    kryo = "io.altoo.akka.serialization.kryo.KryoSerializer"
+}
+
+    serialization-bindings {
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinRequestMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinResponseMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$LobbyDataMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameStartMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameEndMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$DisplayMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$ReadyMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$CommandMessage" = kryo
+      "java.io.Serializable" = java
+    }
+
+       kryo {
+            type = "graph"
+            idstrategy = "incremental"
+            buffer-size = 4096
+            max-buffer-size = -1
+            use-manifests = false
+            use-unsafe = false
+            post-serialization-transformations = "off"
+            implicit-registration-logging = true
+            kryo-trace = true
+            resolve-subclasses = false
+            mappings {
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinRequestMessage" = 20
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinResponseMessage" = 21
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$LobbyDataMessage" = 22
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameStartMessage" = 23
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$ReadyMessage" = 24
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$CommandMessage" = 25
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameEndMessage" = 26
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$DisplayMessage" = 27
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message.JoinRequestMessage" = 28
+            }
+            classes = []
+          }
   }
   remote {
     artery {
@@ -11,4 +54,5 @@ loglevel="DEBUG"
       canonical.port = 0
     }
   }
+
 }
