Concluded messages serialization, and selection screen seems to be stable

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -42,7 +42,8 @@ serializers {
             "it.unibo.pps1920.motoscala.multiplayer.messages.Message$CommandMessage" = 25
             "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameEndMessage" = 26
             "it.unibo.pps1920.motoscala.multiplayer.messages.Message$DisplayMessage" = 27
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message.JoinRequestMessage" = 28
+            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinRequestMessage" = 28
+
             }
             classes = []
           }
