Added kick client and notification

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,14 +11,15 @@ serializers {
 }
 
     serialization-bindings {
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinRequestMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinResponseMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$LobbyDataMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameStartMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameEndMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$DisplayMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$ReadyMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.Message$CommandMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$JoinRequestActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$JoinResponseActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LobbyDataActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameStartActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameEndActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = kryo
       "java.io.Serializable" = java
     }
 
@@ -34,15 +35,15 @@ serializers {
             kryo-trace = true
             resolve-subclasses = false
             mappings {
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinRequestMessage" = 20
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinResponseMessage" = 21
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$LobbyDataMessage" = 22
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameStartMessage" = 23
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$ReadyMessage" = 24
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$CommandMessage" = 25
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$GameEndMessage" = 26
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$DisplayMessage" = 27
-            "it.unibo.pps1920.motoscala.multiplayer.messages.Message$JoinRequestMessage" = 28
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$JoinRequestActorMessage" = 20
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$JoinResponseActorMessage" = 21
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LobbyDataActorMessage" = 22
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameStartActorMessage" = 23
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameEndActorMessage" = 24
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayActorMessage" = 25
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = 26
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandActorMessage" = 27
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = 28
 
             }
             classes = []
