Add fucntional lobby leave

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,6 +20,10 @@ serializers {
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = kryo
+
+
       "java.io.Serializable" = java
     }
 
@@ -44,6 +48,9 @@ serializers {
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = 26
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandActorMessage" = 27
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = 28
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = 29
+             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = 30
+
 
             }
             classes = []
