client and server both start. Correct visualisation of game in client

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -16,9 +16,9 @@ serializers {
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LobbyDataActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameStartActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameEndActorMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayableActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = kryo
-        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandableActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = kryo
@@ -44,9 +44,9 @@ serializers {
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LobbyDataActorMessage" = 22
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameStartActorMessage" = 23
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameEndActorMessage" = 24
-            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayActorMessage" = 25
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayableActorMessage" = 25
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = 26
-            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandActorMessage" = 27
+            "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandableActorMessage" = 27
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = 28
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = 29
              "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = 30
