--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,6 +18,7 @@ serializers {
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$GameEndActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$DisplayableActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$ReadyActorMessage" = kryo
+        "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LevelSetupMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CommandableActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = kryo
         "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = kryo
@@ -50,6 +51,7 @@ serializers {
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$KickActorMessage" = 28
             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$CloseLobbyActorMessage" = 29
              "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LeaveEvent" = 30
+             "it.unibo.pps1920.motoscala.multiplayer.messages.ActorMessage$LevelSetupMessage" = 31
 
 
             }
