--- a/src/main/resources/levels/lvl2.yaml
+++ b/src/main/resources/levels/lvl2.yaml
@@ -14,9 +14,9 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
-    x: 600
-    y: 600
-- !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+    x: 15
+    y: 15
+- !<it.unibo.pps1920.motoscala.model.Level$BlackPupa>
   position:
     x: 600
     y: 500
@@ -26,9 +26,9 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
-    x: 300
-    y: 300
-- !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+    x: 3
+    y: 3
+- !<it.unibo.pps1920.motoscala.model.Level$BlackPupa>
   position:
     x: 600
     y: 100
@@ -38,9 +38,9 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
-    x: 300
-    y: 300
-- !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+    x: 3
+    y: 3
+- !<it.unibo.pps1920.motoscala.model.Level$BlackPupa>
   position:
     x: 600
     y: 300
@@ -50,9 +50,9 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
-    x: 300
-    y: 300
-- !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+    x: 3
+    y: 3
+- !<it.unibo.pps1920.motoscala.model.Level$BluePupa>
   position:
     x: 300
     y: 100
@@ -62,9 +62,9 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
-    x: 300
-    y: 300
-- !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+    x: 3
+    y: 3
+- !<it.unibo.pps1920.motoscala.model.Level$BluePupa>
   position:
     x: 600
     y: 200
@@ -74,9 +74,9 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
-    x: 300
-    y: 300
-- !<it.unibo.pps1920.motoscala.model.Level$BlackPupa>
+    x: 3
+    y: 3
+- !<it.unibo.pps1920.motoscala.model.Level$BluePupa>
   position:
     x: 700
     y: 700
@@ -86,5 +86,11 @@ entities: !<scala.collection.immutable.$colon$colon>
     x: 0
     y: 0
   velocity:
+    x: 3
+    y: 3
+- !<it.unibo.pps1920.motoscala.model.Level$WeightBoostPowerUp>
+  position:
     x: 300
     y: 300
+  shape:
+    radius: 20.0
