--- a/src/main/resources/levels/lvl1.yaml
+++ b/src/main/resources/levels/lvl1.yaml
@@ -1,24 +1,25 @@
 ---
-index: 4
+index: 1
 mapSize:
   x: 800
   y: 800
 entities: !<scala.collection.immutable.$colon$colon>
   - !<it.unibo.pps1920.motoscala.model.Level$Player>
     position:
-      x: 500
-      y: 500
+      x: 300
+      y: 300
     shape:
       radius: 25.0
     velocity:
       x: 15
       y: 15
-  - !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+  - !<it.unibo.pps1920.motoscala.model.Level$Nabicon>
     position:
-      x: 600
+      x: 500
       y: 500
     shape:
-      radius: 25.0
+      dimX: 100.0
+      dimY: 100.0
     velocity:
-      x: 3
-      y: 3
+      x: 0
+      y: 0
