--- a/src/main/resources/levels/lvl3.yaml
+++ b/src/main/resources/levels/lvl3.yaml
@@ -42,8 +42,48 @@ entities: !<scala.collection.immutable.$colon$colon>
       y: 15
   - !<it.unibo.pps1920.motoscala.model.Level$Nabicon>
     position:
-      x: 60
-      y: 60
+      x: 250
+      y: 300
+    shape:
+      dimX: 100.0
+      dimY: 100.0
+    velocity:
+      x: 0
+      y: 0
+  - !<it.unibo.pps1920.motoscala.model.Level$Nabicon>
+    position:
+      x: 400
+      y: 400
+    shape:
+      dimX: 25.0
+      dimY: 25.0
+    velocity:
+      x: 0
+      y: 0
+  - !<it.unibo.pps1920.motoscala.model.Level$Nabicon>
+    position:
+      x: 250
+      y: 500
+    shape:
+      dimX: 100.0
+      dimY: 100.0
+    velocity:
+      x: 0
+      y: 0
+  - !<it.unibo.pps1920.motoscala.model.Level$Nabicon>
+    position:
+      x: 550
+      y: 300
+    shape:
+      dimX: 100.0
+      dimY: 100.0
+    velocity:
+      x: 0
+      y: 0
+  - !<it.unibo.pps1920.motoscala.model.Level$Nabicon>
+    position:
+      x: 550
+      y: 500
     shape:
       dimX: 100.0
       dimY: 100.0
@@ -52,10 +92,64 @@ entities: !<scala.collection.immutable.$colon$colon>
       y: 0
   - !<it.unibo.pps1920.motoscala.model.Level$Beecon>
     position:
-      x: 600
-      y: 200
+      x: 25
+      y: 25
     shape:
       radius: 25.0
     velocity:
       x: 15
       y: 15
+  - !<it.unibo.pps1920.motoscala.model.Level$Beecon>
+    position:
+      x: 775
+      y: 775
+    shape:
+      radius: 25.0
+    velocity:
+      x: 15
+      y: 15
+  - !<it.unibo.pps1920.motoscala.model.Level$Beecon>
+    position:
+      x: 775
+      y: 25
+    shape:
+      radius: 25.0
+    velocity:
+      x: 15
+      y: 15
+  - !<it.unibo.pps1920.motoscala.model.Level$Beecon>
+    position:
+      x: 25
+      y: 775
+    shape:
+      radius: 25.0
+    velocity:
+      x: 15
+      y: 15
+  - !<it.unibo.pps1920.motoscala.model.Level$BlackPupa>
+    position:
+      x: 500
+      y: 700
+    shape:
+      radius: 25.0
+    velocity:
+      x: 5
+      y: 5
+  - !<it.unibo.pps1920.motoscala.model.Level$BluePupa>
+    position:
+      x: 600
+      y: 700
+    shape:
+      radius: 25.0
+    velocity:
+      x: 1
+      y: 1
+  - !<it.unibo.pps1920.motoscala.model.Level$RedPupa>
+    position:
+      x: 700
+      y: 700
+    shape:
+      radius: 25.0
+    velocity:
+      x: 10
+      y: 10
