--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-loglevel="WARNING"
+loglevel="ERROR"
   actor {
     # provider=remote is possible, but prefer cluster
     provider = remote
